bynkc/tests/fixtures/negative/63_arrow_let_on_non_effect/input.bynk
commons demo

fn run() -> Effect[Int] {
  let x <- 42
  Effect.pure(x)
}
